--- a/output/raw-rosenbaum-table-age-exp.tex
+++ b/output/raw-rosenbaum-table-age-exp.tex
@@ -1,22 +1,22 @@
-% matrix: COMBINEexpage file: raw-rosenbaum-table-age-exp.tex  10 May 2018 15:44:01
+% matrix: COMBINEexpage file: raw-rosenbaum-table-age-exp.tex  16 May 2018 16:30:18
 \begin{table}[htbp]
-\begin{tabular}{lcc} \hline \hline
- & GTvC  & BTvC  \\  \hline 
-age5 &     0.392 &     0.259 \\  
-\quad\%Positive &    95.833 &    75.000 \\  
-\quad\%Significant &    45.833 &    29.167 \\  
-\quadp-value &     0.086 &     0.086 \\  
-age15 &     0.531 &     0.297 \\  
-\quad\%Positive &   100.000 &   100.000 \\  
-\quad\%Significant &    55.556 &    11.111 \\  
-\quadp-value &     0.022 &     0.147 \\  
-age34 &     0.291 &     0.227 \\  
-\quad\%Positive &    88.889 &    72.222 \\  
-\quad\%Significant &    33.333 &    16.667 \\  
-\quadp-value &     0.010 &     0.086 \\  
-all &     0.381 &     0.254 \\  
-\quad\%Positive &    94.118 &    78.431 \\  
-\quad\%Significant &    43.137 &    21.569 \\  
-\quadp-value &     0.010 &     0.086 \\  
+\begin{tabular}{lcccccc} \hline \hline
+ & GTvC  & BTvC  & GTvCa  & BTvCa  & GTvCh  & BTvCh  \\  \hline 
+age5 &     0.398 &     0.340 &     0.342 &     0.332 &     0.413 &     0.415 \\  
+\quad\%Positive &    87.500 &    83.333 &    79.167 &    83.333 &    83.333 &    83.333 \\  
+\quad\%Significant &    20.833 &    29.167 &    29.167 &    29.167 &    50.000 &    45.833 \\  
+\quadp-value &     0.086 &     0.086 &     0.595 &     0.061 &     0.305 &     0.394 \\  
+age15 &     0.630 &     0.415 &     0.648 &     0.442 &     0.425 &     0.442 \\  
+\quad\%Positive &    88.889 &   100.000 &    88.889 &   100.000 &   100.000 &   100.000 \\  
+\quad\%Significant &    44.444 &    11.111 &    66.667 &    22.222 &    33.333 &    55.556 \\  
+\quadp-value &     0.022 &     0.147 &     0.110 &     0.448 &     0.061 &     0.823 \\  
+age34 &     0.410 &     0.210 &     0.311 &     0.196 &     0.320 &     0.265 \\  
+\quad\%Positive &    87.500 &    77.778 &    83.333 &    77.778 &    82.353 &    83.333 \\  
+\quad\%Significant &    37.500 &    11.111 &    27.778 &    11.111 &    41.176 &    16.667 \\  
+\quadp-value &     0.010 &     0.086 &     0.004 &     0.201 &     0.061 &     0.859 \\  
+all &     0.445 &     0.307 &     0.385 &     0.304 &     0.384 &     0.367 \\  
+\quad\%Positive &    87.755 &    84.314 &    82.353 &    84.314 &    86.000 &    86.275 \\  
+\quad\%Significant &    30.612 &    19.608 &    35.294 &    21.569 &    44.000 &    37.255 \\  
+\quadp-value &     0.010 &     0.086 &     0.183 &     0.448 &     0.061 &     0.002 \\  
 \hline \hline \end{tabular}
 \end{table}
