--- a/output/raw-rosenbaum-table-cats-exp.tex
+++ b/output/raw-rosenbaum-table-cats-exp.tex
@@ -1,50 +1,50 @@
-% matrix: COMBINEexpcats file: raw-rosenbaum-table-cats-exp.tex  10 May 2018 15:44:12
+% matrix: COMBINEexpcats file: raw-rosenbaum-table-cats-exp.tex  16 May 2018 16:29:55
 \begin{table}[htbp]
-\begin{tabular}{lcc} \hline \hline
- & GTvC  & BTvC  \\  \hline 
-iq &     0.719 &     0.664 \\  
-\quad\%Positive &   100.000 &   100.000 \\  
-\quad\%Significant &    85.714 &    85.714 \\  
-\quadp-value &     0.046 &     0.045 \\  
-ach &     0.672 &     0.235 \\  
-\quad\%Positive &   100.000 &   100.000 \\  
-\quad\%Significant &    80.000 &     0.000 \\  
-\quadp-value &     0.046 &     0.086 \\  
-se &     0.385 &     0.059 \\  
-\quad\%Positive &    92.857 &    50.000 \\  
-\quad\%Significant &    57.143 &     7.143 \\  
-\quadp-value &     0.235 &     0.147 \\  
-mlabor &     0.228 &     0.445 \\  
-\quad\%Positive &   100.000 &   100.000 \\  
-\quad\%Significant &    20.000 &    20.000 \\  
-\quadp-value &     0.086 &     0.001 \\  
-parent &     0.274 &     0.060 \\  
-\quad\%Positive &   100.000 &    80.000 \\  
-\quad\%Significant &    20.000 &     0.000 \\  
-\quadp-value &     0.602 &     0.147 \\  
-edu &     0.356 &     0.174 \\  
-\quad\%Positive &    83.333 &    83.333 \\  
-\quad\%Significant &    33.333 &     0.000 \\  
-\quadp-value &     0.000 &     0.235 \\  
-emp &     0.200 &     0.438 \\  
-\quad\%Positive &   100.000 &   100.000 \\  
-\quad\%Significant &     0.000 &     0.000 \\  
-\quadp-value &     0.151 &     0.022 \\  
-crime &     0.242 &    -0.093 \\  
-\quad\%Positive &   100.000 &    33.333 \\  
-\quad\%Significant &     0.000 &     0.000 \\  
-\quadp-value &     0.715 &     0.812 \\  
-risk &     0.099 &     0.011 \\  
-\quad\%Positive &   100.000 &    25.000 \\  
-\quad\%Significant &     0.000 &    25.000 \\  
-\quadp-value &     0.469 &     0.086 \\  
-health &     0.060 &     0.061 \\  
-\quad\%Positive &    68.750 &    73.333 \\  
-\quad\%Significant &     6.250 &    13.333 \\  
-\quadp-value &     0.046 &     0.000 \\  
-all &     0.381 &     0.254 \\  
-\quad\%Positive &    94.118 &    78.431 \\  
-\quad\%Significant &    43.137 &    21.569 \\  
-\quadp-value &     0.010 &     0.086 \\  
+\begin{tabular}{lcccccc} \hline \hline
+ & GTvC  & BTvC  & GTvCa  & BTvCa  & GTvCh  & BTvCh  \\  \hline 
+iq &     0.700 &     0.833 &     0.675 &     0.796 &     0.740 &     0.844 \\  
+\quad\%Positive &   100.000 &   100.000 &   100.000 &   100.000 &   100.000 &   100.000 \\  
+\quad\%Significant &    42.857 &    85.714 &    57.143 &    85.714 &    85.714 &    85.714 \\  
+\quadp-value &     0.046 &     0.045 &     0.977 &     0.012 &     0.061 &     0.020 \\  
+ach &     0.854 &     0.353 &     0.899 &     0.431 &     0.467 &     0.474 \\  
+\quad\%Positive &   100.000 &   100.000 &   100.000 &   100.000 &   100.000 &   100.000 \\  
+\quad\%Significant &    40.000 &     0.000 &   100.000 &    20.000 &    20.000 &    80.000 \\  
+\quadp-value &     0.046 &     0.086 &     0.183 &     0.448 &     0.414 &     0.823 \\  
+se &     0.467 &     0.084 &     0.360 &     0.132 &     0.362 &     0.251 \\  
+\quad\%Positive &    85.714 &    71.429 &    78.571 &    71.429 &    71.429 &    71.429 \\  
+\quad\%Significant &    50.000 &     7.143 &    42.857 &     7.143 &    50.000 &    21.429 \\  
+\quadp-value &     0.235 &     0.147 &     0.898 &     0.901 &     0.414 &     0.394 \\  
+mlabor &     0.259 &     0.490 &     0.210 &     0.447 &     0.438 &     0.435 \\  
+\quad\%Positive &    80.000 &   100.000 &    80.000 &   100.000 &   100.000 &   100.000 \\  
+\quad\%Significant &     0.000 &    20.000 &     0.000 &    20.000 &    80.000 &    60.000 \\  
+\quadp-value &     0.086 &     0.001 &     0.052 &     0.061 &     0.061 &     0.053 \\  
+parent &     0.192 &     0.193 &     0.041 &     0.212 &     0.322 &     0.210 \\  
+\quad\%Positive &    80.000 &   100.000 &    60.000 &   100.000 &   100.000 &   100.000 \\  
+\quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 &    20.000 &     0.000 \\  
+\quadp-value &     0.602 &     0.147 &     0.183 &     0.061 &     0.414 &     0.823 \\  
+edu &     0.356 &     0.184 &     0.357 &     0.210 &     0.266 &     0.291 \\  
+\quad\%Positive &    83.333 &    66.667 &    83.333 &    66.667 &    83.333 &    83.333 \\  
+\quad\%Significant &    33.333 &    16.667 &    33.333 &    16.667 &    33.333 &    16.667 \\  
+\quadp-value &     0.000 &     0.235 &     0.052 &     0.448 &     0.061 &     0.394 \\  
+emp &     0.174 &     0.638 &     0.166 &     0.692 &     0.425 &     0.451 \\  
+\quad\%Positive &   100.000 &   100.000 &   100.000 &   100.000 &   100.000 &   100.000 \\  
+\quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 &     0.000 &     0.000 \\  
+\quadp-value &     0.151 &     0.022 &     0.429 &     0.448 &     0.867 &     0.394 \\  
+crime &     0.226 &    -0.601 &     0.286 &    -0.694 &    -0.256 &    -0.269 \\  
+\quad\%Positive &   100.000 &    33.333 &   100.000 &    33.333 &    50.000 &    33.333 \\  
+\quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 &     0.000 &     0.000 \\  
+\quadp-value &     0.715 &     0.812 &     0.898 &     0.448 &     0.024 &     0.394 \\  
+risk &     0.144 &     0.167 &     0.100 &     0.014 &    -0.033 &     0.150 \\  
+\quad\%Positive &    66.667 &    25.000 &    50.000 &    50.000 &    50.000 &    50.000 \\  
+\quad\%Significant &     0.000 &    25.000 &     0.000 &     0.000 &     0.000 &    25.000 \\  
+\quadp-value &     0.469 &     0.086 &     0.708 &     0.448 &     0.414 &     0.002 \\  
+health &     0.169 &    -0.128 &     0.119 &     0.069 &     0.102 &    -0.085 \\  
+\quad\%Positive &    73.333 &    53.333 &    68.750 &    56.250 &    62.500 &    60.000 \\  
+\quad\%Significant &     6.667 &     0.000 &    12.500 &     6.250 &     6.250 &     6.667 \\  
+\quadp-value &     0.046 &     0.000 &     0.835 &     0.000 &     0.002 &     0.020 \\  
+all &     0.445 &     0.307 &     0.385 &     0.304 &     0.384 &     0.367 \\  
+\quad\%Positive &    87.755 &    84.314 &    82.353 &    84.314 &    86.000 &    86.275 \\  
+\quad\%Significant &    30.612 &    19.608 &    35.294 &    21.569 &    44.000 &    37.255 \\  
+\quadp-value &     0.010 &     0.086 &     0.183 &     0.448 &     0.061 &     0.002 \\  
 \hline \hline \end{tabular}
 \end{table}
