--- a/output/raw-rosenbaum-table-cats-gender.tex
+++ b/output/raw-rosenbaum-table-cats-gender.tex
@@ -1,50 +1,50 @@
-% matrix: COMBINEgendercats file: raw-rosenbaum-table-cats-gender.tex  10 May 2018 15:44:49
+% matrix: COMBINEgendercats file: raw-rosenbaum-table-cats-gender.tex  16 May 2018 16:30:33
 \begin{table}[htbp]
 \begin{tabular}{lcccc} \hline \hline
  & ChBvG  & CaBvG  & CBvG  & TBvG  \\  \hline 
-iq &     1.100 &    -0.113 &     0.059 &     0.047 \\  
-\quad\%Positive &   100.000 &    14.286 &    57.143 &    57.143 \\  
-\quad\%Significant &    57.143 &     0.000 &     0.000 &     0.000 \\  
-\quadp-value &     0.413 &     0.006 &     0.290 &     0.283 \\  
-ach &     0.530 &    -0.068 &     0.053 &    -0.338 \\  
-\quad\%Positive &   100.000 &    20.000 &    80.000 &     0.000 \\  
+iq &     1.562 &    -0.019 &     0.157 &     0.349 \\  
+\quad\%Positive &   100.000 &    28.571 &    71.429 &    85.714 \\  
+\quad\%Significant &     0.000 &     0.000 &     0.000 &    28.571 \\  
+\quadp-value &     0.357 &     0.120 &     0.290 &     0.283 \\  
+ach &     0.424 &    -0.015 &     0.134 &    -0.219 \\  
+\quad\%Positive &   100.000 &    40.000 &    80.000 &     0.000 \\  
 \quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 \\  
-\quadp-value &     0.080 &     0.476 &     0.065 &     0.404 \\  
-se &     0.719 &    -0.006 &     0.126 &    -0.252 \\  
-\quad\%Positive &    85.714 &    64.286 &    78.571 &    35.714 \\  
-\quad\%Significant &    28.571 &     0.000 &    28.571 &     0.000 \\  
-\quadp-value &     0.833 &     0.149 &     0.191 &     0.660 \\  
-mlabor &     0.321 &    -0.050 &     0.005 &     0.192 \\  
-\quad\%Positive &   100.000 &    20.000 &    40.000 &   100.000 \\  
-\quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 \\  
-\quadp-value &     0.000 &     0.000 &     0.000 &     0.000 \\  
-parent &     0.743 &     0.134 &     0.203 &    -0.019 \\  
-\quad\%Positive &   100.000 &    60.000 &    80.000 &    40.000 \\  
-\quad\%Significant &    20.000 &    20.000 &    20.000 &     0.000 \\  
-\quadp-value &     0.208 &     0.573 &     0.977 &     0.061 \\  
-edu &     0.010 &     0.067 &     0.092 &    -0.138 \\  
-\quad\%Positive &    80.000 &    66.667 &    66.667 &    16.667 \\  
-\quad\%Significant &    20.000 &     0.000 &    16.667 &     0.000 \\  
-\quadp-value &     0.413 &     0.022 &     0.191 &     0.185 \\  
-emp &     0.857 &    -0.007 &     0.144 &     0.437 \\  
-\quad\%Positive &   100.000 &    50.000 &   100.000 &    50.000 \\  
-\quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 \\  
-\quadp-value &     0.208 &     0.012 &     0.117 &     0.110 \\  
-crime &     0.017 &    -0.816 &    -0.651 &    -3.077 \\  
-\quad\%Positive &    50.000 &     0.000 &     0.000 &     0.000 \\  
+\quadp-value &     0.170 &     0.249 &     0.065 &     0.404 \\  
+se &     0.557 &     0.137 &     0.194 &    -0.281 \\  
+\quad\%Positive &    71.429 &    71.429 &    85.714 &    35.714 \\  
+\quad\%Significant &    21.429 &     7.143 &     0.000 &     0.000 \\  
+\quadp-value &     0.790 &     0.249 &     0.191 &     0.660 \\  
+mlabor &    -0.125 &     0.070 &     0.043 &     0.349 \\  
+\quad\%Positive &    25.000 &    80.000 &    60.000 &    60.000 \\  
 \quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 \\  
 \quadp-value &     0.000 &     0.000 &     0.000 &     0.000 \\  
-risk &    -0.624 &    -0.133 &    -0.171 &    -0.224 \\  
-\quad\%Positive &    33.333 &    50.000 &    50.000 &    25.000 \\  
+parent &     0.500 &     0.278 &     0.294 &     0.296 \\  
+\quad\%Positive &    80.000 &    80.000 &    80.000 &   100.000 \\  
+\quad\%Significant &     0.000 &    20.000 &    20.000 &     0.000 \\  
+\quadp-value &     0.357 &     0.622 &     0.977 &     0.061 \\  
+edu &     0.023 &     0.045 &     0.147 &    -0.118 \\  
+\quad\%Positive &    60.000 &    66.667 &    66.667 &    16.667 \\  
+\quad\%Significant &     0.000 &     0.000 &    16.667 &     0.000 \\  
+\quadp-value &     0.357 &     0.004 &     0.191 &     0.185 \\  
+emp &     1.030 &    -0.073 &     0.184 &     0.530 \\  
+\quad\%Positive &   100.000 &     0.000 &   100.000 &   100.000 \\  
 \quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 \\  
-\quadp-value &     0.208 &     0.000 &     0.000 &     0.006 \\  
-health &    -0.002 &    -0.340 &    -0.290 &    -0.460 \\  
-\quad\%Positive &    84.615 &    53.333 &    50.000 &    60.000 \\  
-\quad\%Significant &    15.385 &     6.667 &     6.250 &    20.000 \\  
-\quadp-value &     0.005 &     0.001 &     0.003 &     0.014 \\  
-all &     0.575 &    -0.089 &     0.021 &    -0.176 \\  
-\quad\%Positive &    87.755 &    39.216 &    60.784 &    44.000 \\  
-\quad\%Significant &    22.449 &     1.961 &    11.765 &     4.000 \\  
-\quadp-value &     0.005 &     0.667 &     0.290 &     0.660 \\  
+\quadp-value &     0.062 &     0.048 &     0.117 &     0.110 \\  
+crime &         . &    -0.195 &    -0.189 &    -3.383 \\  
+\quad\%Positive &         . &     0.000 &     0.000 &     0.000 \\  
+\quad\%Significant &         . &     0.000 &     0.000 &     0.000 \\  
+\quadp-value &     0.000 &     0.000 &     0.000 &     0.000 \\  
+risk &     0.026 &     0.015 &     0.031 &    -1.075 \\  
+\quad\%Positive &    50.000 &    66.667 &    66.667 &    50.000 \\  
+\quad\%Significant &     0.000 &     0.000 &     0.000 &     0.000 \\  
+\quadp-value &     0.017 &     0.004 &     0.000 &     0.006 \\  
+health &    -0.195 &    -0.068 &    -0.024 &    -0.478 \\  
+\quad\%Positive &    90.909 &    57.143 &    60.000 &    53.333 \\  
+\quad\%Significant &     9.091 &    21.429 &    26.667 &    13.333 \\  
+\quadp-value &     0.003 &     0.004 &     0.003 &     0.014 \\  
+all &     0.635 &     0.030 &     0.132 &    -0.079 \\  
+\quad\%Positive &    77.778 &    53.061 &    69.388 &    50.000 \\  
+\quad\%Significant &     8.889 &     4.082 &     4.082 &     8.000 \\  
+\quadp-value &     0.034 &     0.427 &     0.290 &     0.660 \\  
 \hline \hline \end{tabular}
 \end{table}
