--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -18,6 +18,20 @@ Table~\ref{table:treatfactors} displays the results. Column (1) is the parameter
 \end{threeparttable}
 \end{sidewaystable}
 
+\begin{sidewaystable}[!htpb]
+\begin{threeparttable}
+\caption{Treatment Effects on Latent Outcomes \textbf{[New.]}} \label{table:treatfactors2}
+\centering 
+\begin{tabularx}{22.5cm}{XcX}
+& \input{output/latent-tes.tex} & 
+\end{tabularx}
+\begin{tablenotes}
+\footnotesize
+\item \textbf{Note:} 
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
 \begin{table}[!htpb]
 \begin{threeparttable}
 \caption{Combining Functions and Non-Parametric, Exact Tests} \label{table:massiveall}
