--- a/output/matching-baseline-test-pstest.tex
+++ b/output/matching-baseline-test-pstest.tex
@@ -4,18 +4,18 @@
 				\cmidrule(lr){2-4} \cmidrule(lr){5-7}
 Baseline Characteristic & \% Bias & $t$-score & $p$-value & \% Bias & $t$-score & $p$-value \\
 \midrule
-Mother's Yrs. of Edu.         &        7.3 &   0.40 &  0.689 		&	    \textbf{28.6}  &   \textbf{1.68} &  \textbf{0.096} \\
-Mother Works           		&       22.3 &   1.06 &  0.290		&	    \textbf{60.2}  &   \textbf{2.81} &  \textbf{0.006} \\
-Mother's Age            		&      -9.7 &  -0.53 &  0.598		&	   \textbf{-38.1}  &  \textbf{-2.06} &  \textbf{0.041} \\  
-Mother's IQ             	  	&   -7.6 &  -0.41 &  0.683 			&	     22.8  &   1.25 &  0.214 \\
-Father Present            	&           5.2 &   0.28 &  0.777		&	-24.8  &  -1.35 &  0.181 \\
-Parental Income             	&        26.1 &   1.23 &  0.221 		&	 4.5  &  0.21 &  0.833 \\
-HRI Score        			&      -30.8 &  -1.73 &  0.087 		&	  -14.1  &  -0.83 &  0.409 \\ 
-Number of Siblings          	 &    -13.2 &  -0.71 &  0.481 		&	    \textbf{-50.2}  & \textbf{-2.70} &  \textbf{0.008} \\
-Male                   		&      0.5 &  0.03 &  0.978 			&	-11.3  &  -0.62 &  0.534 \\ 
-Apgar Score, 1 min.           &       -6.7 &  -0.39 &  0.700 		&	1.3  &   0.08 &  0.934 \\
-Apgar Score, 5 min.           &        -6.5 &  -0.48 &  0.630 		&	6.3  &  0.50 &  0.620 \\
-ABC                  		&    17.6 &   0.97 &  0.332 		&	24.1  &   1.32  & 0.189 \\  
+Mother's Yrs. of Edu.         &         -10.8 &   -0.57 &   0.573		&	    -41.9  &    -1.30   &  0.202 \\
+Mother Works           		&        -16.6 &   -0.75 &   0.456 		&	   -62.0  &   -1.61 &    0.119 \\
+Mother's Age            		&       8.9 &    0.45 &  0.654		&	   27.0  &     0.83  &   0.413 \\  
+Mother's IQ             	  	&   12.5 &   0.68 &  0.498 			&	      -22.7  &    -0.72   &  0.474 \\
+Father Present            	&           -15.4 &  -0.78 &  0.438 	&	 20.3  &     0.62   &  0.541 \\
+Parental Income             	&       -25.6 &   -1.14 &   0.256  		&	  -4.2 &   -0.11   &  0.911 \\
+HRI Score        			&      37.2 &    1.96 &  0.053  		&	 19.8  &     0.62   &  0.538 \\ 
+Number of Siblings          	 &    10.9 &    0.55 &  0.585		&	     38.8 &     1.19   &  0.244 \\
+Male                   		&     3.4 &    0.17 &  0.864 		&	 -0.7 &    -0.02  &   0.983 \\ 
+Apgar Score, 1 min.           &        -17.9 &   -1.04 &  0.302 		&	-19.6  &    -0.65  &   0.522 \\
+Apgar Score, 5 min.           &        -6.3 &   -0.43 &  0.669 		&	-29.6 &    -1.14  &   0.260  \\
+ABC                  		&   -28.4 &   -1.47 &  0.145 		&	-35.7  &    -1.11  &   0.273 \\  
 \bottomrule
 \end{tabular}
 
