added new rosenbaum tables

--- a/Appendices/Results_treatmenteffects.tex
+++ b/Appendices/Results_treatmenteffects.tex
@@ -156,6 +156,75 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \doublespacing
 
 
+\subsection{Non-parametric Tests}\ref{app:subsection-nonparametric-tests}
+
+
+\begin{table}[h!]
+\centering
+\begin{threeparttable}
+\caption{Age Summary of Treatment-Control Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-age-exp-TvC-big}
+\input{output/raw-rosenbaum-table-age-exp-TvC-big-20-10}
+\begin{tablenotes}
+\item Note:
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[h!]
+\centering
+\begin{threeparttable}
+\caption{Category Summary of Treatment-Control Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-cats-exp-TvC-big}
+\input{output/raw-rosenbaum-table-cats-exp-TvC-big-20-10}
+\begin{tablenotes}
+\item Note:
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[h!]
+\centering
+\begin{threeparttable}
+\caption{Age Summary of Treatment-Control (Stay at Home) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-age-exp-TvCh-big}
+\input{output/raw-rosenbaum-table-age-exp-TvCh-big-20-10}
+\begin{tablenotes}
+\item Note:
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[h!]
+\centering
+\begin{threeparttable}
+\caption{Category Summary of Treatment-Control (Stay at Home) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-cats-exp-TvCh-big}
+\input{output/raw-rosenbaum-table-cats-exp-TvCh-big-20-10}
+\begin{tablenotes}
+\item Note:
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[h!]
+\centering
+\begin{threeparttable}
+\caption{Age Summary of Treatment-Control (Alternative Care) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-age-exp-TvCa-big}
+\input{output/raw-rosenbaum-table-age-exp-TvCa-big-20-10}
+\begin{tablenotes}
+\item Note:
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[h!]
+\centering
+\begin{threeparttable}
+\caption{Category Summary of Treatment-Control (Alternative Care) Comparisons by Gender, Full Set of Outcomes}\label{tab:rosenbaum-table-cats-exp-TvCa-big}
+\input{output/raw-rosenbaum-table-cats-exp-TvCa-big-20-10}
+\begin{tablenotes}
+\item Note:
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
 \input{AppResOutput/1_abccare_appendix_treatmenteffects}
 \doublespacing
 
