--- a/output/raw-rosenbaum-table-age-exp_editedTvC.tex
+++ b/output/raw-rosenbaum-table-age-exp_editedTvC.tex
@@ -1,22 +1,22 @@
-% matrix: COMBINE file: raw-rosenbaum-table.tex  10 May 2018 09:03:15
+
 
 \begin{tabular}{lcccc} 
 \toprule
  & \mc{2}{c}{\textbf{(a) Childhood}}   & \mc{2}{c}{\textbf{(b) School Age}}  \\
  & Females & Males & Females & Males \\
  \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
- Average Effect Size &     0.392 &     0.259 &     0.531 &     0.297 \\  
- \% $>0$ Treatment Effect &    95.833 &    75.000 	&	   100.000 &   100.000 \\  
- \% $>0$, Significant Treatment Effect&    45.833 &    29.167 &    55.556 &    11.111 \\  
- Rosenbaum $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&       \textbf{0.022} &     0.147 \\  
+ Average Effect Size &      \textbf{    0.367} &    \textbf{    0.316} &     \textbf{    0.395} &     0.214 \\  
+ \% $>0$ Treatment Effect &    \textbf{   95.833}  &     \textbf{   75.000}	&	 \textbf{  100.000} &   \textbf{  100.000}  \\  
+ \% $>0$, Significant Treatment Effect&     \textbf{   62.500}  &   \textbf{   37.500} &    \textbf{   55.556} &     \textbf{   44.444} \\  
+\citet{Rosenbaum_2005_Distribution_JRSS} $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&       \textbf{0.022} &     0.147 \\  
  \midrule
  & \mc{2}{c}{\textbf{(c) Adulthood}}   & \mc{2}{c}{\textbf{(d) All}}  \\
  & Females & Males & Females & Males \\
   \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
- Average Effect Size  &     0.291 &     0.227 						&     0.381 &     0.254 \\  
- \% $>0$ Treatment Effect  &    88.889 &    72.222 				&    94.118 &    78.431 \\  
- \% $>0$, Significant Treatment Effect &    33.333 &    16.667 			&    43.137 &    21.569 \\  
- Rosenbaum $p$-value &     \textbf{0.010} &     \textbf{0.086} 	&       \textbf{0.010} &     \textbf{0.086} \\  
+ Average Effect Size  &     \textbf{    0.298} &    \textbf{    0.399} &     \textbf{    0.348} &  \textbf{0.327} \\  
+ \% $>0$ Treatment Effect  &    \textbf{   88.889} &    \textbf{   72.222} & \textbf{   94.118} &    \textbf{   78.431} \\  
+ \% $>0$, Significant Treatment Effect &    \textbf{   50.000}  &    \textbf{   33.333}	&    \textbf{   56.863}&    \textbf{   37.255} \\  
+\citet{Rosenbaum_2005_Distribution_JRSS} $p$-value &     \textbf{0.010} &     \textbf{0.086} 	&       \textbf{0.010} &     \textbf{0.086} \\  
 \bottomrule
 \end{tabular}
 
