JUST WAITING FOR CODE TO FINISH

--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -53,7 +53,7 @@ C_\ell = \sum^{B_\ell}_{j=1} \bm{1} (\Delta_{j} >0),
 
 Under the null hypothesis of no treatment effects for the block of outcomes indexed by $\mathcal{J}_\ell$, and assuming the validity of asymptotic approximations, $C_\ell / B_\ell$ is centered at $\frac{1}{2}$. We compute the fraction $C_\ell / B_\ell$ and the corresponding bootstrapped empirical distribution to obtain a $p$-value. The bootstrap procedure accounts for dependence in unobservables across outcomes (within blocks) in a general way. 
 
-The test based on the number of outcomes for which the treatment effect is significant at the $10\%$ level is analogous: Under the null hypothesis, 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program.\footnote{In this case, we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.} We provide evidence against both null hypotheses. The combining functions avoid: (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing.\footnote{We present $p$-values for these hypotheses and a number of combining functions by outcome category in Appendix~\ref{appendix:results}.} In Section~\ref{sec:treatment-effects}, we present yet another alternative. We calculate a ``latent'' outcome out of the set of outcomes within a block and perform inference on this latent outcome. This analysis also points to beneficial effects of the program.
+The test based on the number of outcomes for which the treatment effect is significant at the $10\%$ level is analogous: Under the null hypothesis, 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program.\footnote{In this case, we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.} We provide evidence against both null hypotheses. The combining functions avoid: (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing. We present $p$-values for these hypotheses and a number of combining functions by outcome category in Appendix~\ref{appendix:results}. \footnote{In Appendix~\ref{appendix:results}, we present yet another alternative. We calculate a ``latent'' outcome out of the set of outcomes within a block and perform inference on this latent outcome. This analysis also points to beneficial effects of the program.}
 
 \textbf{[JJH: Add discussion of Rosenbaum.][This subsection now describes the Rosenbaum test.]}
 
