as sent to jorge

--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -7,19 +7,19 @@ Given the difficulty of individually analyzing all of the available outcomes to 
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Summary of Treatment-Control Comparisons by Gender} \label{table:summary}
+\caption{Summary of Treatment-Control Comparisons by Gender \textbf{[AZ: With more bootstraps, the significance  of the first three statistics and the proportion of significant effects will change.]}} \label{table:summary}
 \centering 
 \begin{tabularx}{16.5cm}{XcX}
 & \input{output/raw-rosenbaum-table-age-exp_editedTvC.tex} & 
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
+\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. We explain these statistics and the inference in more detail below. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-The first finding in Table~\ref{table:summary} is that randomized assignment to ABC/CARE benefited both females and males across the life cycle. Across the life cycle, the average effect size for females (males) is $0.381$ ($0.254)$, the percentage of positive treatment effects is $94\%$ ($78\%$), and the percentage of significant treatment effects at the $10\%$ level is $43\%$ ($22\%$). We provide the $p$-values from a non-parametric test contrasting the joint distribution of the outcomes. The conclusion from these comparisons aligns with the conclusions from the other measures, even in magnitude if the size of the $p$-value is taken as a measure of magnitude \citep{Fisher_1935_Inference_JRSS}. One downside of the summaries in Table~\ref{table:summary} is the lack of perspective on the magnitudes of the individual effects. We describe and discuss the magnitudes below.\footnote{For example, assignment to treatment increased college graduation for males by 17 percentage points, with a standard error of 5 percentage points (the college graduation rate for the control group is 12\%). For females, assignment to treatment increased high school graduation by 25 percentage points, with a standard error of 1 percentage point (the high school graduation rate for the control group is 53\% points). These results are the basis of the forecasts in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}: The authors document that education is actually the main intermediate input when forecasting benefits across the life cycle.}
+The first finding in Table~\ref{table:summary} is that randomized assignment to ABC/CARE benefited both females and males across the life cycle. Across the life cycle, the average effect size for females (males) is $0.381$ ($0.254)$, the percentage of positive treatment effects is $94\%$ ($78\%$), and the percentage of significant treatment effects at the $10\%$ level is $63\%$ ($41\%$). We provide the $p$-values from a non-parametric test contrasting the joint distribution of the outcomes. The conclusion from these comparisons aligns with the conclusions from the other measures, even in magnitude if the size of the $p$-value is taken as a measure of magnitude \citep{Fisher_1935_Inference_JRSS}. The $p$-values and proportions do not directly explain the magnitudes of the effect, although we describe and discuss the magnitudes in more detail below.\footnote{For example, assignment to treatment increased college graduation for males by 17 percentage points, with a standard error of 5 percentage points (the college graduation rate for the control group is 12\%). For females, assignment to treatment increased high school graduation by 25 percentage points, with a standard error of 1 percentage point (the high school graduation rate for the control group is 53\% points). These results are the basis of the forecasts in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}: The authors document that education is actually the main intermediate input when forecasting benefits across the life cycle.}
 
 The second finding in Table~\ref{table:summary} is that females benefit more than males. This holds across the life cycle and across all of the measures that we employ to summarize the treatment effects. To explain the gendered treatment effects, we document that control-group girls grew up in less favorable environments if compared to control-group boys using baseline measures (e.g.,\ less father presence, lower maternal education and IQ). Girls in the control group who stayed at home ($27\%$ of the control-group girls), were taken care of in a disadvantaged environment. Girls who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools because their families were more resource constrained if compared to their male counterparts. Thus, girls benefited more from treatment because they would have otherwise grown up in more disadvantaged environments if compared to boys.\footnote{Documentation in \citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} shows that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this documentation with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
 
