--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -33,14 +33,20 @@ We rely on econometric methods for identification. In the main text, we rely on 
 
 %Column (3) shows the raw difference between the treatment-group children and the control-group children who stayed at home. Column (4) implements a matching estimator to weight this difference and fix the counterfactual to ``staying at home.''  Columns (5) and (6) are analogous when fixing the counterfactual to attending an alternative preschool. A clear pattern emerges: Girls benefit more from treatment if compared to staying at home, while boys benefit more from treatment is compared to alternative preschools. For example, \textbf{[JLG: discussion on magnitudes here once Josh factors are available.]} Tables~\ref{table:massiveall1} and~\ref{table:massiveall2} corroborate this when using our different methodologies to assess treatment effects across categories. \textbf{[JLG: discussion on magnitudes here once these two tables are available.]}
 
+Tables~\ref{table:massivealt} and~\ref{table:massivehome} provide analogous estimates to Table~\ref{table:massiveall}, using the different comparison groups (alternative preschool or stay at home). In the comparison between the treatment group and those who attend alternative preschool, the  \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value is significant for males more than for females. The exception to this is in education, in which the effect on females (0.332) is much larger than the effect of males (0.177). This pattern is reversed in the comparison between the treatment group and those who stayed at home. The exception to this is risky behavior, in which the effect on males (0.122) is much larger than the effect on females (0.054), even though the proportion of (significant) outcomes is the same. 
+
+The intergenerational effect seen on the increase in parental income is strong across comparisons and genders. The effect size is larger in the comparison between treatment and those who stay at home, which is logical given that there are fewer labor market opportunities if the children stay at home. 
+
+The effects on crime highlight that females were highly impacted by ABC/CARE, especially compared to those who attended alternative care. \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} find that even though the treatment effects on the crime outcomes are larger for women than for men, the men commit more socially expensive crimes. In the benefit/cost ratio that they compute, the effect of ABC/CARE on reducing individual male crimes is an important component. \citet{Garcia_etal_2019_ECE_IMHJ} discuss the crime results in more detail.
+
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Combining Functions and Non-Parametric, Exact Tests, Treatment vs. Alternative Care} \label{table:massivealt}
+\caption{Combining Functions and Non-Parametric, Exact Tests, Treatment vs. Alternative} \label{table:massivealt}
 \centering
- \input{output/raw-rosenbaum-table-cats-exp-TvCa-updated-2-2.tex} 
+ \input{output/raw-rosenbaum-table-cats-exp-TvCa-updated-10-10.tex} 
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who attend alternative care. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
+\item \footnotesize \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who attend alternatives. The panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -49,17 +55,15 @@ We rely on econometric methods for identification. In the main text, we rely on 
 \begin{threeparttable}
 \caption{Combining Functions and Non-Parametric, Exact Tests, Treatment vs. Home Care} \label{table:massivehome}
 \centering
- \input{output/raw-rosenbaum-table-cats-exp-TvCh-updated-2-2.tex} 
+ \input{output/raw-rosenbaum-table-cats-exp-TvCh-updated-10-10.tex} 
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who stay at home. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
+\item  \footnotesize \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who stay at home.The panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-
-
-The sharp difference in the comparison of treatment to staying at home and alternative preschools suggests that boys and girls faced different situations of socio-economic disadvantaged at home. Figure~\ref{figure:socdis} investigates this. We start by noting that take-up of alternatives does not differ by gender (Panel~\ref{figure:altgender}). What does differ by gender is socioeconomic disadvantage. We create a latent of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}).\footnote{Note that this measure is based on baseline characteristics, so this result holds for the treatment group.} Because girls' families were more resource constrained if compared to their male counterparts, girls in the control group were taken care of in a more disadvantaged environment or went to lower-quality preschools. Thus, they benefited more than boys if compared to the next best alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
+The difference in the comparison of treatment to staying at home and alternative preschools suggests that boys and girls faced different situations of socio-economic disadvantaged at home. Figure~\ref{figure:socdis} investigates this. We start by noting that take-up of alternatives does not differ by gender (Panel~\ref{figure:altgender}). What does differ by gender is socioeconomic disadvantage. We create a latent of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}).\footnote{Note that this measure is based on baseline characteristics, so this result holds for the treatment group.} Because girls' families were more resource constrained if compared to their male counterparts, girls in the control group were taken care of in a more disadvantaged environment or went to lower-quality preschools. Thus, they benefited more than boys if compared to the next best alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
 
 We formally test the difference in disadvantage across boys and girls in Table~\ref{table:disadtests}. We reject the null of a common joint distribution of the variables composing our measure of socioeconomic disadvantage across girls and boys (at baseline). In Panels~\ref{figure:disadgirls} and~\ref{figure:disadboys} of Figure~\ref{figure:socdis}, we further dissect socioeconomic disadvantage within genders, and provide the corresponding tests in Table~\ref{table:disadtests}. 
 
