--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -22,7 +22,7 @@ These aspects of the program relate to structural quality rather than process qu
 
 CARE included an additional arm of treatment. Besides the services offered in ABC, those in the CARE treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses finding no effect of this home-visiting component on its own, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} These analyses justify merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component. We henceforth analyze the samples as coming from a single ABC/CARE program. This combination is also done in \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve}.
 
-Table~\ref{tab:abccare-baseline} compares pre-program variables for experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. However, after accounting for multiple hypotheses using the Holm test, the difference in HRI score is no longer significant \citep{Holme_1979_Sequential_SJS}.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.} \textbf{[JJH: Use Hold Test! Casual!][This is implemented now.]}
+Table~\ref{tab:abccare-baseline} compares pre-program variables for experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. However, after accounting for multiple hypotheses using the Holm test, the difference in HRI score is no longer significant \citep{Holme_1979_Sequential_SJS}.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.} \textbf{[JJH: Use Holm Test! Casual!][This is implemented now.]}
 
 \begin{table}[!htbp]
 \centering
