--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -2,24 +2,22 @@ In this paper, we focus on testing treatment effects within categories of outcom
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Combining Functions and Non-Parametric, Exact Tests} \label{table:massiveall}
+\caption{Combining Functions and Non-Parametric, Exact Tests \textbf{[AZ: Signficance and \% Significant will change with more bootstraps.}} \label{table:massiveall}
 \centering
-\input{output/raw-rosenbaum-table-cats-exp-TvC-keep.tex} 
+\input{output/raw-rosenbaum-table-cats-exp-TvC-updated-10-10.tex} 
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group.  The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
+\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-We consider the outcomes reported in Appendix~\ref{appendix:gdiff-tes}. In Table~\ref{table:summary}, we classify these outcomes by age to preview our results, aggregating outcomes within ages and across categories. In Table~\ref{table:massiveall}, we aggregate across ages and within categories. The benefits of random assignment to treatment are noticeable for both males and females. The benefits appear across the life cycle and across multiple outcomes. Participants of ABC/CARE benefit in terms of skills, both cognitive and socio-emotional. They also benefit in terms of achievement tests, which help measure both cognitive and non-cognitive skills \citep{Almlund_Duckworth_etal_2011_ecoval}.
+We consider the outcomes reported in Appendix~\ref{appendix:gdiff-tes}. In Table~\ref{table:summary}, we classify these outcomes by age to preview our results, aggregating outcomes within ages and across categories. In Table~\ref{table:massiveall}, we aggregate across ages and within categories. The benefits of random assignment to treatment are noticeable for both males and females. The benefits appear across the life cycle and across multiple outcomes. Participants of ABC/CARE benefit in terms of skills, both cognitive and socio-emotional. They also benefit in terms of achievement tests, which help measure both cognitive and non-cognitive skills \citep{Almlund_Duckworth_etal_2011_ecoval}. The magnitudes of these effects hint at a female advantage in the program's effect on skill development.
 
-[ADD ADDITIONAL DESCRIPTION ONCE TABLE IS DONE]
+ABC/CARE had childcare, and thus facilitated maternal employment and education. This facilitated maternal employment and education. The program has a sizable effect on mother labor, which aggregates parental labor income and employment across the life cycle. The effect size is 0.228 for females and about double that for males (0.445).\footnote{In most households, parental income and maternal income are the same: 75\% of children in the sample grew up in a household with a single mother.} This intergenerational effect is not only present in terms of parental income. It is also present in parenting, which aggregates HOME scores qualifying the relationship between the children and their mothers between ages 0 and 8. The magnitude of the effect for boys is smaller, in part due to the fact that the HOME measurement includes a subscale of punishment with more punishment being considered conducive to a negative environment. The families of boys scored lower in this subscale than the families of girls.
 
-ABC/CARE had childcare, and thus facilitated maternal employment and education. This facilitated maternal employment and education. The program has a sizable effect on mother labor, which aggregates parental labor income and employment across the life cycle.\footnote{In most households, parental income and maternal income are the same: 75\% of children in the sample grew up in a household with a single mother.} This intergenerational effect is not only present in terms of parental income. It is also present in parenting, which aggregates HOME scores qualifying the relationship between the children and their mothers between ages 0 and 8.
+In outcomes like education, employment, crime, risky behavior (which includes, for example, drug use) there is also a sizable effect. In our companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, we document that these effects translate into a benefit/cost ratio of $7.3$. This calculation accounts for the costs of implementing the program, including the welfare loss generated by taxing society in order to fund the program. 
 
-In outcomes like education, employment, crime, risky behavior (which includes, for example, drug use) there is also a sizable effect. In our companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, we document that these effects translate into a benefit/cost ratio of $7.3$. This calculation accounts for the costs of implementing the program, including the welfare loss generated by taxing society in order to fund the program.
-
-Consistent with the results in Table~\ref{table:summary}, the results in Table~\ref{table:massiveall} show that females benefit more from treatment if compared to males. In 7 out of the 10 categories that we consider, the within-category average effect size is larger for females. In 9 out of 10 categories, the proportion of positive effects is at least as large for males if compared to females. The same is true for the proportion of positive and significant effects, at the 10\% level. The comparison based on the \citet{Rosenbaum_2005_Distribution_JRSS} $p$-values is not as clear, which is one of the reasons why this difference deserves further assessment. We do so next.
+Consistent with the results in Table~\ref{table:summary}, the results in Table~\ref{table:massiveall} show that females benefit more from treatment if compared to males. In 7 out of the 10 categories that we consider, the within-category average effect size is larger for females. In 9 out of 10 categories, the proportion of positive effects is at least as large for males if compared to females. The same is true for the proportion of positive and significant effects, at the 10\% level. The comparison based on the \citet{Rosenbaum_2005_Distribution_JRSS} $p$-values is not as clear, which is one of the reasons why the gender difference deserves further assessment. We do so next.
 
 
